syntax = "proto3";

option java_multiple_files = true;
option java_package = "site.ycsb";
option java_outer_classname = "RS";
option objc_class_prefix = "RTG";

package site.ycsb;

service ReplicationService {
  rpc write (stream Request) returns (stream Reply) {}
  rpc read  (stream Request) returns (stream Reply) {}
}

message Request {
    enum OpType {
        READ   = 0;
        SCAN   = 1;
        INSERT = 2;
        UPDATE = 3;
    }
    int32 batchSize = 1;
    repeated OpType type  = 2;
    repeated string key   = 3;
    repeated string value = 4;
}
  
message Reply {
    int32 batchSize = 1;
    repeated string status = 2;
    repeated string content = 3;
}